# planloop

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  agents-md  coverage.xml  new_plan.json  payload.json  pyproject.toml  ruff_errors.txt  setup-dev.sh  spec.md  state.json  temp_generate_plan.py  verify-env.sh
.github/workflows/: ci.yml  update-metrics.yml
.hypothesis/constants/: 069e88968889314f  094194af22e0355a  099178e540924121  0a0bc8eea73c6027  0d3d91b85ed473e5  170a43ed2baadf4b  26750c96d0bb7cb1  27989abaafe66ab8  2c71d3933de59a21  2e2f02a96e5b25b0  3a1a66ee3f827615  3e1398937f42c927  3f16adf05610b732  426c104ddf65d5f5  433c5b0c1a9d46ba  49f608e4210ace0d  5334ba5856a55b05  5773432b1f029fa4  58ce9347e0ce59d2  59ecd81ad1c33d8b  5cb0189eac2f3090  (+46 more)
.planloop_demo/: current_session  index.json
.planloop_dogfood/: current_session  index.json
.planloop_home/: config.yml  current_session  index.json
docs/: BASH-PTY-SUMMARY.md  PROPOSAL-IMPROVEMENTS.md  README.md  agent-performance.md  agent_lab_plan.md  agents.md  architecture.md  bash-pty-errors.md  dev-mode-observability-plan.md  dev-mode-quick-reference.md  development-setup.md  honk-bash-pty-integration-proposal.md  honk-case-study.md  honk-implementation-fixes.md  honk-workflow-analysis.md  lab-testing.md  lab_improvement_plan.md  multi-agent-research.md  multi-agent-setup.md  plan.md  pty-debugging-ultimate-guide.md  task-management-feature-spec.md  testing-strategy-web-ui.md  troubleshooting.md  v1.6-multi-agent-research.md  website-plan.md
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
labs/: __init__.py  aggregate_metrics.py  baseline.json  check_baseline.sh  check_rate_limits.sh  dspy_optimizer.py  generate_viz.py  metrics.json  optimize_prompt.sh  optimize_safely.sh  run_dspy_optimization.py  run_iterations.sh  run_lab.py  simple_dspy_optimizer.py  test_real_agents.sh  update_baseline.sh  update_readme.py
scripts/: generate-types.py
tests/: test_agent_continuation.py  test_agent_prompts.py  test_agent_transcript.py  test_auto_sync_guide.py  test_bash_health.py  test_cli_alert.py  test_cli_debug.py  test_cli_describe.py  test_cli_guide.py  test_cli_hello.py  test_cli_loop.py  test_cli_reuse.py  test_cli_search.py  test_cli_selftest.py  test_cli_sessions.py  test_cli_snapshot.py  test_cli_status.py  test_cli_status_suggest_hints.py  test_cli_suggest.py  test_cli_templates.py  test_cli_update.py  test_config_suggest.py  test_context_builder.py  test_coverage_analyzer.py  test_deadlock.py  test_describe.py  test_dev_mode_error_context.py  test_dev_mode_observability.py  test_dev_mode_spans.py  test_diff.py  test_env_setup.py  test_feedback_command.py  test_guide_versioning.py  test_home.py  test_lab_compliance.py  test_llm_client.py  test_lock.py  test_lock_logging.py  test_monitor_cli.py  test_plugin_system.py  (+20 more)
(+283 files in other folders)
