[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planloop"
version = "0.1.0"
description = "Agent-first planning loop CLI"
readme = "README.md"
authors = [{name = "Joel Klabo"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.60",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "rich>=13.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.100",
    "mypy>=1.8",
    "pytest-cov>=4.1",
    "types-PyYAML>=6.0",
    "ruff>=0.1"
]

[project.scripts]
planloop = "planloop.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"planloop.templates" = ["**/*.md"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["planloop"]
